# simple-cloudevent.py

./: README.md  requirements.txt  setup.cfg  setup.py
src/simple_cloudevent/: __init__.py  __version__.py  exception.py
tests/unit/: test_pub_msg.py  test_queue_msg_to_simple_cloudevent.py  test_simple_cloudevent.py
