[metadata]
name = simple-cloudevent
version = attr: simple_cloudevent.__version__
url = https://github.com/daxiom/simple-cloudevent/
project_urls =
    Documentation = https://simple-cloudevent.readthedocs.io/
    Changes = 
    Source Code = https://github.com/daxiom/simple-cloudevent/
    Issue Tracker = https://github.com/daxiom/simple-cloudevent/issues/
    Chat = 
license = Apache
author = thor wolpert
author_email = thor@daxiom.com
maintainer = thor wolpert
maintainer_email = thor@daxiom.com
description = super simple cloudevent that supports json
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: Apache
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.9

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    simple_cloudevent
    tests

[coverage:paths]
source =
    src
    */site-packages

[pycodestyles]
max_line_length = 120
good-names=
    ce,

[flake8]
ignore =
    # bare except, handled by bugbear B001
    E722
max-line-length = 120
per-file-ignores =
    # __init__ module exports names
    src/simple_cloudevent/__init__.py: F401
